--- a/OsuMapDownload/OsuMapDownload.csproj
+++ b/OsuMapDownload/OsuMapDownload.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bloodcat.cs" />
-    <Compile Include="MapSetDownload.cs" />
+    <Compile Include="Models\MapSetDownload.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
