Set multidownload test to download 3 maps

--- a/OsuMapDownload/OsuMapDownload.csproj
+++ b/OsuMapDownload/OsuMapDownload.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bloodcat.cs" />
+    <Compile Include="DownloadUtils.cs" />
     <Compile Include="Models\MapSetDownload.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
